--- a/shippable.yml
+++ b/shippable.yml
@@ -7,12 +7,12 @@ node_js:
 
 # The path for Xunit to output test reports
 env:
-  - XUNIT_FILE=shipable/testresults/result.xml
+  - XUNIT_FILE=shippable/testresults/result.xml
 
 # Create directories for test and coverage reports
 before_script:
-  - mkdir -p shipable/testresults
-  - mkdir -p shipable/codecoverage
+  - mkdir -p shippable/testresults
+  - mkdir -p shippable/codecoverage
   #- touch shippable/codecoverage/cobertura-coverage.xml
   #-	echo '<?xml version="1.0" ?>' >> shippable/codecoverage/cobertura-coverage.xml
   #-	echo '<!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">' >> shippable/codecoverage/cobertura-coverage.xml
@@ -29,6 +29,6 @@ script:
 after_script:
   - echo 'coverage'
   - ./node_modules/.bin/istanbul cover grunt -- -u tdd
-  - ./node_modules/.bin/istanbul report cobertura --dir  shipable/codecoverage/
-  - ls -la shipable/codecoverage/
-  - cat shipable/codecoverage/cobertura-coverage.xml
+  - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
+  - ls -la shippable/codecoverage/
+  - cat shippable/codecoverage/cobertura-coverage.xml
