--- a/package.json
+++ b/package.json
@@ -1,34 +1,83 @@
 {
-  "name": "sample-node-couchdb",
-  "version": "0.0.0",
-  "description": "Testing CouchDB service",
-  "main": "index.js",
+  "name": "@execthread/api-server",
+  "version": "1.24.0",
   "scripts": {
-    "test": "grunt"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:Shippable/sample_node.git"
-  },
-  "author": "Patrick Ellis",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Shippable/sample_node/issues"
-  },
-  "homepage": "https://github.com/Shippable/sample_node",
-  "dependencies": {
-    "express": "^4.2.0",
-    "nano": "^5.10.0",
-    "should": "^4.0.1"
+    "cleanse": "node scripts/cleanse",
+    "start": "node --max-old-space-size=8192 app.js",
+    "test": "grunt test",
+    "precommit": "./node_modules/.bin/grunt lint",
+    "prepush": "./node_modules/.bin/grunt test"
   },
   "devDependencies": {
-    "chai": "^1.9.1",
-    "grunt": "^0.4.5",
-    "grunt-express-server": "^0.4.17",
-    "grunt-simple-mocha": "^0.4.0",
-    "istanbul": "^0.2.9",
-    "mocha": "^1.18.2",
-    "superagent": "^0.18.0",
-    "xunit-file": "0.0.5"
+    "@execthread/eslint-config-node": "^1.0.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "eslint": "~2.10.2",
+    "eslint-config-angular": "~0.5.0",
+    "eslint-plugin-angular": "~1.0.1",
+    "eslint-plugin-if-in-test": "~0.2.0",
+    "eslint-plugin-promise": "~1.3.0",
+    "eslint-plugin-should-promised": "~1.0.8",
+    "faker": "^3.1.0",
+    "grunt": "~1.0.1",
+    "grunt-cli": "~1.2.0",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-eslint": "~18.1.0",
+    "grunt-mocha-istanbul": "~4.0.2",
+    "grunt-mocha-test": "~0.12.7",
+    "grunt-protractor-runner": "^4.0.0",
+    "husky": "0.12.0",
+    "istanbul": "~0.4.3",
+    "load-grunt-tasks": "~3.5.0",
+    "mocha": "~2.5.3",
+    "mockery": "~1.7.0",
+    "mockgoose": "^6.0.3",
+    "mongoose": "^4.5.4",
+    "portfinder": "^1.0.3",
+    "request-promise": "^3.0.0",
+    "sinon": "~1.17.4",
+    "tmp": "0.0.28",
+    "xunit-file": "0.0.9"
+  },
+  "dependencies": {
+    "@execthread/data-access": "git:git@github.com:ExecThread/data-access#665-add-subregion-again",
+    "@execthread/logger": "1.3.2",
+    "authorized": "1.0.0",
+    "body-parser": "1.15.1",
+    "chai": "3.5.0",
+    "chai-as-promised": "5.3.0",
+    "chai-datetime": "1.4.1",
+    "co": "4.6.0",
+    "compression": "1.6.2",
+    "connect-busboy": "0.0.2",
+    "connect-flash": "0.1.1",
+    "cookie-session": "2.0.0-alpha.1",
+    "cors": "^2.8.1",
+    "dotenv": "2.0.0",
+    "email-addresses": "2.0.2",
+    "emailjs-mime-codec": "1.0.2",
+    "es6-promisify": "4.1.0",
+    "express": "4.13.4",
+    "extend-error": "0.0.2",
+    "function-rate-limit": "1.0.1",
+    "html-to-text": "2.1.0",
+    "json-stringify-safe": "5.0.1",
+    "mail-listener2": "0.1.8",
+    "method-override": "2.3.5",
+    "moment": "2.13.0",
+    "mute": "2.0.6",
+    "node-linkedin": "0.5.4",
+    "node-schedule": "1.1.0",
+    "oibackoff": "1.0.1",
+    "passport": "0.3.2",
+    "passport-linkedin-oauth2": "git:github.com/ExecThread/passport-linkedin-oauth2#feature/handle-blocked-public-profile",
+    "pug": "2.0.0-alpha7",
+    "sanitize-filename": "1.6.0",
+    "serve-favicon": "2.3.0",
+    "serve-static": "1.10.2",
+    "shortid": "2.2.6",
+    "sparkpost": "1.3.4",
+    "underscore": "1.8.3",
+    "word-wrap": "1.1.0"
   }
 }
