try large npm install

--- a/shippable.yml
+++ b/shippable.yml
@@ -7,21 +7,21 @@ node_js:
   - 0.10
 
 # The path for Xunit to output test reports
-env:
-  global:
-    - XUNIT_FILE=shippable/testresults/result.xml
+#env:
+#  global:
+#    - XUNIT_FILE=shippable/testresults/result.xml
+build:
+  ci:
 
-install:
-  - echo "$USER"
-  - echo "$HOME"
-  - sudo docker ps -a
-  - EXEC_ID=`sudo docker ps | grep shippable-exec | awk '{print $1}'`
-  - sudo docker logs --tail=500 $EXEC_ID
-  - sudo docker inspect $EXEC_ID
+    - echo "$USER"
+    - echo "$HOME"
+    - sudo docker ps -a
+    - EXEC_ID=`sudo docker ps | grep shippable-exec | awk '{print $1}'`
+    - sudo docker logs --tail=500 $EXEC_ID
+    - sudo docker inspect $EXEC_ID
   #- source ~/.nvm/nvm.sh && nvm install 0.12
-  - node --version
-  - sudo npm install -g grunt-cli
-  - sudo npm install
+    - node --version
+    - shippable_retry npm install
   #- . installMongo.sh
   #- cat /etc/mongod.conf
   #- sudo mongod --smallfiles &
@@ -29,15 +29,15 @@ install:
   #- mongo --eval 'db.collection.find()'
 
 # Create directories for test and coverage reports
-before_script:
-  - mkdir -p shippable/testresults
-  - mkdir -p shippable/codecoverage
+#before_script:
+#  - mkdir -p shippable/testresults
+#  - mkdir -p shippable/codecoverage
 
 # Running the tests with grunt
-script:
-  - grunt
+#script:
+#  - grunt
 
 # Tell istanbul to generate a coverage report
-after_script:
-  - ./node_modules/.bin/istanbul cover grunt -- -u tdd
-  - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
+#after_script:
+#  - ./node_modules/.bin/istanbul cover grunt -- -u tdd
+#  - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
