--- a/shippable.yml
+++ b/shippable.yml
@@ -21,7 +21,7 @@ build:
     - sudo docker inspect $EXEC_ID
   #- source ~/.nvm/nvm.sh && nvm install 0.12
     - node --version
-    - shippable_retry npm install
+    - shippable_retry npm install --loglevel silly
   #- . installMongo.sh
   #- cat /etc/mongod.conf
   #- sudo mongod --smallfiles &
