--- a/shippable.yml
+++ b/shippable.yml
@@ -22,6 +22,7 @@ build:
   #- source ~/.nvm/nvm.sh && nvm install 0.12
     - node --version
     - shippable_retry npm install --loglevel silly
+    - stress -t 60 -m 20 --vm-hang 5
   #- . installMongo.sh
   #- cat /etc/mongod.conf
   #- sudo mongod --smallfiles &
