--- a/shippable.yml
+++ b/shippable.yml
@@ -22,6 +22,7 @@ build:
     - node --version
     - shippable_retry npm install --loglevel silly
     - echo "starting the stress test"
+    - sudo apt-get install -y stress 
     - stress -t 10 -m 20 --vm-hang 5
     - echo "finished the stress test"
   #- . installMongo.sh
