--- a/shippable.yml
+++ b/shippable.yml
@@ -20,7 +20,7 @@ build:
     - EXEC_ID=`sudo docker ps | grep shippable-exec | awk '{print $1}'`
     - sudo docker logs --tail=500 $EXEC_ID
     - sudo docker inspect $EXEC_ID
-    - source ~/.nvm/nvm.sh
+    #- source ~/.nvm/nvm.sh
     - node --version
     - touch .npmrc
     - chmod 600 .npmrc
