--- a/shippable.yml
+++ b/shippable.yml
@@ -25,7 +25,7 @@ build:
     - touch .npmrc
     - chmod 600 .npmrc
     - shippable_retry npm install --loglevel silent
-    - echo MY_FAVORITE_VARIABLE=$BUILD_NUMBER>>.env
+    - echo MY_FAVORITE_VARIABLE=$NOT_VALID>>.env
     #- echo "starting the stress test"
     #- sudo apt-get install -y stress 
     #- stress -t 10 -m 20 --vm-hang 5
