--- a/shippable.yml
+++ b/shippable.yml
@@ -22,6 +22,7 @@ install:
   - node --version
   - sudo npm install -g grunt-cli
   - sudo npm install
+  - ./testLogs.sh
   #- . installMongo.sh
   #- cat /etc/mongod.conf
   #- sudo mongod --smallfiles &
