--- a/shippable.yml
+++ b/shippable.yml
@@ -22,7 +22,7 @@ build:
     - node --version
     - sudo npm install -g grunt-cli
     - sudo npm install
-    - cat Ulysses.txt
+    - cat Ulysses.txt > /dev/null
     - grunt
     
   on_success:
