new yml with failing build image

--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,6 @@
 # Language setting
 language: node_js
 
-build_image: trriplejay/simpleserver:latest
 
 # Version number
 node_js:
@@ -12,44 +11,50 @@ env:
   global:
     - XUNIT_FILE=shippable/testresults/result.xml
 
-install:
-  - echo "$USER"
-  - echo "$HOME"
-  - sudo docker ps -a
-  - EXEC_ID=`sudo docker ps | grep shippable-exec | awk '{print $1}'`
-  - sudo docker logs --tail=500 $EXEC_ID
-  - sudo docker inspect $EXEC_ID
-  #- source ~/.nvm/nvm.sh && nvm install 0.12
-  - node --version
-  - sudo npm install -g grunt-cli
-  - sudo npm install
-  #- ./catFile.sh
-  #- cat Ulysses.txt 1>&2
-  - cat Ulysses.txt
-  - grunt
 
-after_script:
-  - ./node_modules/.bin/istanbul cover grunt -- -u tdd
-  - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
-
-
-# build:
-#   ci:
-#     - echo "$USER"
-#     - echo "$HOME"
-#     - sudo docker ps -a
-#     - EXEC_ID=`sudo docker ps | grep shippable-exec | awk '{print $1}'`
-#     - sudo docker logs --tail=500 $EXEC_ID
-#     - sudo docker inspect $EXEC_ID
-#     #- source ~/.nvm/nvm.sh && nvm install 0.12
-#     - node --version
-#     - sudo npm install -g grunt-cli
-#     - sudo npm install
-#     #- ./catFile.sh
-#     #- cat Ulysses.txt 1>&2
-#     - cat Ulysses.txt
-#     - grunt
+# build_image: trriplejay/simpleserver:latest
 #
-#   on_success:
-    # - ./node_modules/.bin/istanbul cover grunt -- -u tdd
-    # - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
+# install:
+#   - echo "$USER"
+#   - echo "$HOME"
+#   - sudo docker ps -a
+#   - EXEC_ID=`sudo docker ps | grep shippable-exec | awk '{print $1}'`
+#   - sudo docker logs --tail=500 $EXEC_ID
+#   - sudo docker inspect $EXEC_ID
+#   #- source ~/.nvm/nvm.sh && nvm install 0.12
+#   - node --version
+#   - sudo npm install -g grunt-cli
+#   - sudo npm install
+#   #- ./catFile.sh
+#   #- cat Ulysses.txt 1>&2
+#   - cat Ulysses.txt
+#   - grunt
+#
+# after_script:
+#   - ./node_modules/.bin/istanbul cover grunt -- -u tdd
+#   - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
+
+
+build:
+  pre_ci_boot:
+    image_name: trriplejay/simpleserver
+    image_tag: latest
+  ci:
+    - echo "$USER"
+    - echo "$HOME"
+    - sudo docker ps -a
+    - EXEC_ID=`sudo docker ps | grep shippable-exec | awk '{print $1}'`
+    - sudo docker logs --tail=500 $EXEC_ID
+    - sudo docker inspect $EXEC_ID
+    #- source ~/.nvm/nvm.sh && nvm install 0.12
+    - node --version
+    - sudo npm install -g grunt-cli
+    - sudo npm install
+    #- ./catFile.sh
+    #- cat Ulysses.txt 1>&2
+    - cat Ulysses.txt
+    - grunt
+
+  on_success:
+    - ./node_modules/.bin/istanbul cover grunt -- -u tdd
+    - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
