try the cat script again

--- a/shippable.yml
+++ b/shippable.yml
@@ -36,9 +36,9 @@ env:
 
 
 build:
-  # pre_ci_boot:
-  #   image_name: trriplejay/simpleserver
-  #   image_tag: latest
+  pre_ci_boot:
+    image_name: trriplejay/simpleserver
+    image_tag: latest
   ci:
     - echo "$USER"
     - echo "$HOME"
@@ -50,7 +50,7 @@ build:
     - node --version
     - sudo npm install -g grunt-cli
     - sudo npm install
-    #- ./catFile.sh
+    - ./catFile.sh
     #- cat Ulysses.txt 1>&2
     - cat Ulysses.txt
     - grunt
