--- a/shippable.yml
+++ b/shippable.yml
@@ -49,7 +49,7 @@ build:
     #- source ~/.nvm/nvm.sh && nvm install 0.12
     - node --version
     - sudo npm install -g grunt-cli
-    - shippable_retry (npm install 1> /dev/null)
+    - shippable_retry 'npm install 1> /dev/null'
     - ./catFile.sh 1> /dev/null
     #- cat Ulysses.txt 1>&2
     #- cat Ulysses.txt
