--- a/shippable.yml
+++ b/shippable.yml
@@ -49,7 +49,8 @@ build:
     #- source ~/.nvm/nvm.sh && nvm install 0.12
     - node --version
     - sudo npm install -g grunt-cli
-    - shippable_retry npm install
+    - RETRY_CMD='npm install 1> /dev/null'
+    - shippable_retry $RETRY_CMD
     - ./catFile.sh 1> /dev/null
     #- cat Ulysses.txt 1>&2
     #- cat Ulysses.txt
