--- a/shippable.yml
+++ b/shippable.yml
@@ -27,6 +27,8 @@ install:
   #- sudo mongod --smallfiles &
   #- sleep 15
   #- mongo --eval 'db.collection.find()'
+  - sudo apt-get install -y tree
+  - sudo tree /
 
 # Create directories for test and coverage reports
 before_script:
