--- a/shippable.yml
+++ b/shippable.yml
@@ -3,32 +3,12 @@ language: node_js
 
 # Version number
 node_js:
-  - 0.10.25
+  - 8.10.0
 
-# The path for Xunit to output test reports
-env:
-  - XUNIT_FILE=shippable/testresults/result.xml
-
-# Create directories for test and coverage reports
-before_script:
-  - mkdir -p shippable/testresults
-  - mkdir -p shippable/codecoverage
-  #- touch shippable/codecoverage/cobertura-coverage.xml
-  #-	echo '<?xml version="1.0" ?>' >> shippable/codecoverage/cobertura-coverage.xml
-  #-	echo '<!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">' >> shippable/codecoverage/cobertura-coverage.xml
-  #-	echo '<coverage lines-valid="19"  lines-covered="15"  line-rate="1"  branches-valid="0"  branches-covered="0"  branch-rate="1"  timestamp="1420757434726" complexity="0" version="0.1">' >> shippable/codecoverage/cobertura-coverage.xml
-  #-	echo '</coverage>' >> shippable/codecoverage/cobertura-coverage.xml
-   
-
-# Running the tests with grunt
-script:
-  - echo 'grunt!'
-  - grunt
-
-# Tell istanbul to generate a coverage report
-after_script:
-  - echo 'coverage'
-  - ./node_modules/.bin/istanbul cover grunt -- -u tdd
-  - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
-  - ls -la shippable/codecoverage/
-  - cat shippable/codecoverage/cobertura-coverage.xml
+build:
+  pre_ci_boot:
+    image_name: devopsrecipes/build_alpine_ci
+    image_tag: 654253
+  ci:
+    - echo "hello"
+    
