--- a/shippable.yml
+++ b/shippable.yml
@@ -6,6 +6,10 @@ node_js:
   - 8.12.0
 
 build:
+  pre_ci_boot:
+    image_name: drydock/u16javall
+    image_tag: test
+    pull: true
   ci:
 #     - sudo npm install -g grunt-cli
 #     - sudo npm install
